[metadata]
name = youtube-mp3
version = 0.0.1
author = Weston Wille
author_email = rwwille@gmail.com
description = For converting a YouTube video into an mp3 file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rwwille/yt2mp3
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False